# vitreus

./: .gitignore  AGENTS.md  README.md  pyproject.toml  technical-blueprint.txt
core/: __init__.py  driver.py  reasoning.py  vision.py
docs/: devto-gemma-4-challenge-submission.md  devto-gemma-4-write-about-submission.md
examples/: sample_workbook.csv  test_commands.nu  test_commands.sh  test_workbook.xlsx
interfaces/: __init__.py  cli.py  gui_overlay.py
scripts/: calc.nu  setup_arch.sh
tests/: test_backends.py  test_cli.py  test_driver.py  test_output.py  test_reasoning.py  test_vision.py
vitreus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
